// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`composition badge-burst > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 451,
      "y": 151,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 467,
      "y": 151,
    },
    {
      "fontSize": 14,
      "h": 25,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 1001,
    },
    {
      "fontSize": 70,
      "h": 120,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 569,
    },
    {
      "fontSize": 37,
      "h": 62,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 722,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 816,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 816,
    },
  ],
  "typeBudget": 1.5529227519633613,
}
`;

exports[`composition badge-burst > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1920,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 425,
      "y": 269,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 445,
      "y": 269,
    },
    {
      "fontSize": 19,
      "h": 34,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1746,
    },
    {
      "fontSize": 116,
      "h": 319,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 848,
    },
    {
      "fontSize": 49,
      "h": 165,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1211,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 395,
      "x": 343,
      "y": 1419,
    },
    {
      "fontSize": 40,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 395,
      "x": 343,
      "y": 1419,
    },
  ],
  "typeBudget": 1.5529227519633613,
}
`;

exports[`composition badge-burst > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 529,
      "y": 95,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 542,
      "y": 95,
    },
    {
      "fontSize": 12,
      "h": 22,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 608,
    },
    {
      "fontSize": 73,
      "h": 100,
      "originId": "headline",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 362,
    },
    {
      "fontSize": 31,
      "h": 52,
      "originId": "sub",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 489,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 53,
      "originId": "cta-bg",
      "type": "shape",
      "w": 248,
      "x": 476,
      "y": 550,
    },
    {
      "fontSize": 25,
      "h": 53,
      "originId": "cta",
      "type": "text",
      "w": 248,
      "x": 476,
      "y": 550,
    },
  ],
  "typeBudget": 1.5529227519633613,
}
`;

exports[`composition banner-strip > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 15,
      "h": 27,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 999,
    },
    {
      "fontSize": 92,
      "h": 253,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 534,
    },
    {
      "fontSize": 35,
      "h": 66,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 819,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 918,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 918,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition banner-strip > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1920,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 20,
      "h": 36,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1744,
    },
    {
      "fontSize": 109,
      "h": 336,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1040,
    },
    {
      "fontSize": 51,
      "h": 172,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1420,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 395,
      "x": 343,
      "y": 1635,
    },
    {
      "fontSize": 40,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 395,
      "x": 343,
      "y": 1635,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition banner-strip > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 40,
      "originId": "badge-bg",
      "type": "shape",
      "w": 136,
      "x": 1004,
      "y": 45,
    },
    {
      "fontSize": 20,
      "h": 40,
      "originId": "badge",
      "type": "text",
      "w": 112,
      "x": 1016,
      "y": 45,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 551,
    },
    {
      "fontSize": 63,
      "h": 193,
      "originId": "headline",
      "type": "text",
      "w": 527,
      "x": 60,
      "y": 182,
    },
    {
      "fontSize": 30,
      "h": 101,
      "originId": "sub",
      "type": "text",
      "w": 527,
      "x": 60,
      "y": 384,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 48,
      "originId": "cta-bg",
      "type": "shape",
      "w": 227,
      "x": 764,
      "y": 494,
    },
    {
      "fontSize": 23,
      "h": 48,
      "originId": "cta",
      "type": "text",
      "w": 227,
      "x": 764,
      "y": 494,
    },
  ],
  "typeBudget": 1.4065137213227479,
}
`;

exports[`composition centred-emblem > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 13,
      "h": 23,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 1003,
    },
    {
      "fontSize": 66,
      "h": 114,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 399,
    },
    {
      "fontSize": 35,
      "h": 59,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 557,
    },
  ],
  "typeBudget": 1.3891493543928373,
}
`;

exports[`composition centred-emblem > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 18,
      "h": 32,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1748,
    },
    {
      "fontSize": 110,
      "h": 303,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 628,
    },
    {
      "fontSize": 46,
      "h": 155,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 989,
    },
  ],
  "typeBudget": 1.3891493543928373,
}
`;

exports[`composition centred-emblem > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 997,
      "y": 45,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 1010,
      "y": 45,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 610,
    },
    {
      "fontSize": 69,
      "h": 95,
      "originId": "headline",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 220,
    },
    {
      "fontSize": 29,
      "h": 49,
      "originId": "sub",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 351,
    },
  ],
  "typeBudget": 1.3891493543928373,
}
`;

exports[`composition editorial-sidebar > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "editorial-sidebar-bg",
      "type": "shape",
      "w": 410,
      "x": 0,
      "y": 0,
    },
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 670,
      "x": 410,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 54,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 70,
      "y": 54,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 1006,
    },
    {
      "fontSize": 47,
      "h": 165,
      "originId": "headline",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 388,
    },
    {
      "fontSize": 18,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 583,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 54,
      "y": 662,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 54,
      "y": 662,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`composition editorial-sidebar > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1920,
      "originId": "editorial-sidebar-bg",
      "type": "shape",
      "w": 410,
      "x": 0,
      "y": 0,
    },
    {
      "h": 1920,
      "originId": "img",
      "type": "image",
      "w": 670,
      "x": 410,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 72,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 92,
      "y": 80,
    },
    {
      "fontSize": 14,
      "h": 25,
      "originId": "legal",
      "type": "text",
      "w": 266,
      "x": 72,
      "y": 1755,
    },
    {
      "fontSize": 45,
      "h": 220,
      "originId": "headline",
      "type": "text",
      "w": 266,
      "x": 72,
      "y": 724,
    },
    {
      "fontSize": 19,
      "h": 83,
      "originId": "sub",
      "type": "text",
      "w": 266,
      "x": 72,
      "y": 984,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 266,
      "x": 72,
      "y": 1088,
    },
    {
      "fontSize": 36,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 266,
      "x": 72,
      "y": 1088,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`composition editorial-sidebar > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "editorial-sidebar-bg",
      "type": "shape",
      "w": 456,
      "x": 0,
      "y": 0,
    },
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 744,
      "x": 456,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 60,
      "y": 45,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 73,
      "y": 45,
    },
    {
      "fontSize": 9,
      "h": 16,
      "originId": "legal",
      "type": "text",
      "w": 351,
      "x": 60,
      "y": 614,
    },
    {
      "fontSize": 44,
      "h": 138,
      "originId": "headline",
      "type": "text",
      "w": 351,
      "x": 60,
      "y": 210,
    },
    {
      "fontSize": 18,
      "h": 52,
      "originId": "sub",
      "type": "text",
      "w": 351,
      "x": 60,
      "y": 373,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 53,
      "originId": "cta-bg",
      "type": "shape",
      "w": 248,
      "x": 60,
      "y": 438,
    },
    {
      "fontSize": 25,
      "h": 53,
      "originId": "cta",
      "type": "text",
      "w": 248,
      "x": 60,
      "y": 438,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`composition hero-fullbleed > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 15,
      "h": 27,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 999,
    },
    {
      "fontSize": 92,
      "h": 253,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 534,
    },
    {
      "fontSize": 35,
      "h": 66,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 819,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 918,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 918,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition hero-fullbleed > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1920,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 20,
      "h": 36,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1744,
    },
    {
      "fontSize": 109,
      "h": 336,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1040,
    },
    {
      "fontSize": 51,
      "h": 172,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1420,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 395,
      "x": 343,
      "y": 1635,
    },
    {
      "fontSize": 40,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 395,
      "x": 343,
      "y": 1635,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition hero-fullbleed > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 40,
      "originId": "badge-bg",
      "type": "shape",
      "w": 136,
      "x": 1004,
      "y": 45,
    },
    {
      "fontSize": 20,
      "h": 40,
      "originId": "badge",
      "type": "text",
      "w": 112,
      "x": 1016,
      "y": 45,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 610,
    },
    {
      "fontSize": 70,
      "h": 96,
      "originId": "headline",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 344,
    },
    {
      "fontSize": 30,
      "h": 51,
      "originId": "sub",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 467,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 48,
      "originId": "cta-bg",
      "type": "shape",
      "w": 227,
      "x": 487,
      "y": 545,
    },
    {
      "fontSize": 23,
      "h": 48,
      "originId": "cta",
      "type": "text",
      "w": 227,
      "x": 487,
      "y": 545,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition minimal-centered > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 428,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 451,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 467,
      "y": 54,
    },
    {
      "fontSize": 13,
      "h": 23,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 1003,
    },
    {
      "fontSize": 66,
      "h": 114,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 613,
    },
    {
      "fontSize": 35,
      "h": 59,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 760,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 851,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 851,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`composition minimal-centered > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 440,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 425,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 445,
      "y": 80,
    },
    {
      "fontSize": 18,
      "h": 32,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1748,
    },
    {
      "fontSize": 110,
      "h": 303,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 844,
    },
    {
      "fontSize": 46,
      "h": 155,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1191,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 395,
      "x": 343,
      "y": 1389,
    },
    {
      "fontSize": 40,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 395,
      "x": 343,
      "y": 1389,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`composition minimal-centered > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 460,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 529,
      "y": 45,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 542,
      "y": 45,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 602,
    },
    {
      "fontSize": 69,
      "h": 0,
      "originId": "headline",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 522,
    },
    {
      "fontSize": 29,
      "h": 0,
      "originId": "sub",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 531,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 53,
      "originId": "cta-bg",
      "type": "shape",
      "w": 248,
      "x": 476,
      "y": 540,
    },
    {
      "fontSize": 25,
      "h": 53,
      "originId": "cta",
      "type": "text",
      "w": 248,
      "x": 476,
      "y": 540,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`composition overlap-card > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 15,
      "h": 27,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 999,
    },
    {
      "fontSize": 92,
      "h": 253,
      "originId": "headline",
      "type": "text",
      "w": 842,
      "x": 119,
      "y": 548,
    },
    {
      "fontSize": 31,
      "h": 66,
      "originId": "sub",
      "type": "text",
      "w": 842,
      "x": 119,
      "y": 823,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 910,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 910,
    },
  ],
  "typeBudget": 1.6179504245281287,
}
`;

exports[`composition overlap-card > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1920,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 20,
      "h": 36,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1744,
    },
    {
      "fontSize": 98,
      "h": 336,
      "originId": "headline",
      "type": "text",
      "w": 763,
      "x": 158,
      "y": 1060,
    },
    {
      "fontSize": 51,
      "h": 172,
      "originId": "sub",
      "type": "text",
      "w": 763,
      "x": 158,
      "y": 1425,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 395,
      "x": 342,
      "y": 1626,
    },
    {
      "fontSize": 40,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 395,
      "x": 342,
      "y": 1626,
    },
  ],
  "typeBudget": 1.6179504245281287,
}
`;

exports[`composition overlap-card > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 40,
      "originId": "badge-bg",
      "type": "shape",
      "w": 136,
      "x": 1004,
      "y": 45,
    },
    {
      "fontSize": 20,
      "h": 40,
      "originId": "badge",
      "type": "text",
      "w": 112,
      "x": 1016,
      "y": 45,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 610,
    },
    {
      "fontSize": 70,
      "h": 96,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 114,
      "y": 354,
    },
    {
      "fontSize": 30,
      "h": 51,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 114,
      "y": 468,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 48,
      "originId": "cta-bg",
      "type": "shape",
      "w": 227,
      "x": 487,
      "y": 537,
    },
    {
      "fontSize": 23,
      "h": 48,
      "originId": "cta",
      "type": "text",
      "w": 227,
      "x": 487,
      "y": 537,
    },
  ],
  "typeBudget": 1.6179504245281287,
}
`;

exports[`composition poster-frame > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 396,
      "originId": "img",
      "type": "image",
      "w": 886,
      "x": 97,
      "y": 97,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 13,
      "h": 23,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 1003,
    },
    {
      "fontSize": 83,
      "h": 228,
      "originId": "headline",
      "type": "text",
      "w": 886,
      "x": 97,
      "y": 526,
    },
    {
      "fontSize": 35,
      "h": 59,
      "originId": "sub",
      "type": "text",
      "w": 886,
      "x": 97,
      "y": 786,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 877,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 877,
    },
  ],
  "typeBudget": 1.7650368267579581,
}
`;

exports[`composition poster-frame > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 856,
      "originId": "img",
      "type": "image",
      "w": 821,
      "x": 130,
      "y": 138,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 18,
      "h": 32,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1748,
    },
    {
      "fontSize": 99,
      "h": 303,
      "originId": "headline",
      "type": "text",
      "w": 821,
      "x": 130,
      "y": 1037,
    },
    {
      "fontSize": 46,
      "h": 155,
      "originId": "sub",
      "type": "text",
      "w": 821,
      "x": 130,
      "y": 1383,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 395,
      "x": 343,
      "y": 1581,
    },
    {
      "fontSize": 40,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 395,
      "x": 343,
      "y": 1581,
    },
  ],
  "typeBudget": 1.7650368267579581,
}
`;

exports[`composition poster-frame > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 200,
      "originId": "img",
      "type": "image",
      "w": 1008,
      "x": 96,
      "y": 81,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 997,
      "y": 45,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 1010,
      "y": 45,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 610,
    },
    {
      "fontSize": 69,
      "h": 95,
      "originId": "headline",
      "type": "text",
      "w": 1008,
      "x": 96,
      "y": 308,
    },
    {
      "fontSize": 29,
      "h": 49,
      "originId": "sub",
      "type": "text",
      "w": 1008,
      "x": 96,
      "y": 430,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 53,
      "originId": "cta-bg",
      "type": "shape",
      "w": 248,
      "x": 476,
      "y": 506,
    },
    {
      "fontSize": 25,
      "h": 53,
      "originId": "cta",
      "type": "text",
      "w": 248,
      "x": 476,
      "y": 506,
    },
  ],
  "typeBudget": 1.7650368267579581,
}
`;

exports[`composition split-panel > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "split-panel-bg",
      "type": "shape",
      "w": 497,
      "x": 0,
      "y": 0,
    },
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 583,
      "x": 497,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 54,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 70,
      "y": 54,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 1006,
    },
    {
      "fontSize": 47,
      "h": 165,
      "originId": "headline",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 388,
    },
    {
      "fontSize": 21,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 583,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 54,
      "y": 662,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 54,
      "y": 662,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`composition split-panel > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1920,
      "originId": "split-panel-bg",
      "type": "shape",
      "w": 497,
      "x": 0,
      "y": 0,
    },
    {
      "h": 1920,
      "originId": "img",
      "type": "image",
      "w": 583,
      "x": 497,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 72,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 92,
      "y": 80,
    },
    {
      "fontSize": 14,
      "h": 25,
      "originId": "legal",
      "type": "text",
      "w": 353,
      "x": 72,
      "y": 1755,
    },
    {
      "fontSize": 63,
      "h": 220,
      "originId": "headline",
      "type": "text",
      "w": 353,
      "x": 72,
      "y": 724,
    },
    {
      "fontSize": 22,
      "h": 83,
      "originId": "sub",
      "type": "text",
      "w": 353,
      "x": 72,
      "y": 984,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 353,
      "x": 72,
      "y": 1088,
    },
    {
      "fontSize": 40,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 353,
      "x": 72,
      "y": 1088,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`composition split-panel > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "split-panel-bg",
      "type": "shape",
      "w": 552,
      "x": 0,
      "y": 0,
    },
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 648,
      "x": 552,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 60,
      "y": 45,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 73,
      "y": 45,
    },
    {
      "fontSize": 9,
      "h": 16,
      "originId": "legal",
      "type": "text",
      "w": 447,
      "x": 60,
      "y": 614,
    },
    {
      "fontSize": 55,
      "h": 138,
      "originId": "headline",
      "type": "text",
      "w": 447,
      "x": 60,
      "y": 210,
    },
    {
      "fontSize": 18,
      "h": 52,
      "originId": "sub",
      "type": "text",
      "w": 447,
      "x": 60,
      "y": 373,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 53,
      "originId": "cta-bg",
      "type": "shape",
      "w": 248,
      "x": 60,
      "y": 438,
    },
    {
      "fontSize": 25,
      "h": 53,
      "originId": "cta",
      "type": "text",
      "w": 248,
      "x": 60,
      "y": 438,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`composition stacked-thirds > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 646,
      "originId": "img",
      "type": "image",
      "w": 972,
      "x": 54,
      "y": 227,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 12,
      "h": 22,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 385,
    },
    {
      "fontSize": 65,
      "h": 100,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 133,
    },
    {
      "fontSize": 35,
      "h": 59,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 243,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 312,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 312,
    },
  ],
  "typeBudget": 1.8753516284303302,
}
`;

exports[`composition stacked-thirds > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1053,
      "originId": "img",
      "type": "image",
      "w": 936,
      "x": 72,
      "y": 447,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 16,
      "h": 29,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 724,
    },
    {
      "fontSize": 98,
      "h": 270,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 176,
    },
    {
      "fontSize": 46,
      "h": 155,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 459,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 395,
      "x": 343,
      "y": 627,
    },
    {
      "fontSize": 40,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 395,
      "x": 343,
      "y": 627,
    },
  ],
  "typeBudget": 1.8753516284303302,
}
`;

exports[`composition stacked-thirds > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 321,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 147,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 997,
      "y": 45,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 1010,
      "y": 45,
    },
    {
      "fontSize": 10,
      "h": 18,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 612,
    },
    {
      "fontSize": 61,
      "h": 84,
      "originId": "headline",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 110,
    },
    {
      "fontSize": 29,
      "h": 49,
      "originId": "sub",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 486,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 53,
      "originId": "cta-bg",
      "type": "shape",
      "w": 248,
      "x": 476,
      "y": 550,
    },
    {
      "fontSize": 25,
      "h": 53,
      "originId": "cta",
      "type": "text",
      "w": 248,
      "x": 476,
      "y": 550,
    },
  ],
  "typeBudget": 1.7190723260611362,
}
`;

exports[`composition top-bottom > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 656,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 176,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 12,
      "h": 22,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 1004,
    },
    {
      "fontSize": 65,
      "h": 100,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 133,
    },
    {
      "fontSize": 35,
      "h": 59,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 853,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 931,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 931,
    },
  ],
  "typeBudget": 1.7190723260611362,
}
`;

exports[`composition top-bottom > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1065,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 379,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 16,
      "h": 29,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1751,
    },
    {
      "fontSize": 98,
      "h": 270,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 176,
    },
    {
      "fontSize": 46,
      "h": 155,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1472,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 395,
      "x": 343,
      "y": 1654,
    },
    {
      "fontSize": 40,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 395,
      "x": 343,
      "y": 1654,
    },
  ],
  "typeBudget": 1.7190723260611362,
}
`;

exports[`composition top-bottom > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 321,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 147,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 997,
      "y": 45,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 1010,
      "y": 45,
    },
    {
      "fontSize": 10,
      "h": 18,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 612,
    },
    {
      "fontSize": 61,
      "h": 84,
      "originId": "headline",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 110,
    },
    {
      "fontSize": 29,
      "h": 49,
      "originId": "sub",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 486,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 53,
      "originId": "cta-bg",
      "type": "shape",
      "w": 248,
      "x": 476,
      "y": 550,
    },
    {
      "fontSize": 25,
      "h": 53,
      "originId": "cta",
      "type": "text",
      "w": 248,
      "x": 476,
      "y": 550,
    },
  ],
  "typeBudget": 1.7190723260611362,
}
`;

exports[`composition type-dominant > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 13,
      "h": 23,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 1003,
    },
    {
      "fontSize": 66,
      "h": 114,
      "originId": "headline",
      "type": "text",
      "w": 929,
      "x": 76,
      "y": 399,
    },
    {
      "fontSize": 35,
      "h": 59,
      "originId": "sub",
      "type": "text",
      "w": 929,
      "x": 76,
      "y": 557,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 659,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 659,
    },
  ],
  "typeBudget": 1.9051191145958914,
}
`;

exports[`composition type-dominant > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 18,
      "h": 32,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1748,
    },
    {
      "fontSize": 110,
      "h": 303,
      "originId": "headline",
      "type": "text",
      "w": 878,
      "x": 101,
      "y": 628,
    },
    {
      "fontSize": 46,
      "h": 155,
      "originId": "sub",
      "type": "text",
      "w": 878,
      "x": 101,
      "y": 989,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 395,
      "x": 343,
      "y": 1202,
    },
    {
      "fontSize": 40,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 395,
      "x": 343,
      "y": 1202,
    },
  ],
  "typeBudget": 1.9051191145958914,
}
`;

exports[`composition type-dominant > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 997,
      "y": 45,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 1010,
      "y": 45,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 610,
    },
    {
      "fontSize": 69,
      "h": 95,
      "originId": "headline",
      "type": "text",
      "w": 1044,
      "x": 78,
      "y": 220,
    },
    {
      "fontSize": 29,
      "h": 49,
      "originId": "sub",
      "type": "text",
      "w": 1044,
      "x": 78,
      "y": 351,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 53,
      "originId": "cta-bg",
      "type": "shape",
      "w": 248,
      "x": 476,
      "y": 436,
    },
    {
      "fontSize": 25,
      "h": 53,
      "originId": "cta",
      "type": "text",
      "w": 248,
      "x": 476,
      "y": 436,
    },
  ],
  "typeBudget": 1.9051191145958914,
}
`;

exports[`headline emphasis > does not change any geometry 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 15,
      "h": 27,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 999,
    },
    {
      "fontSize": 92,
      "h": 253,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 534,
    },
    {
      "fontSize": 35,
      "h": 66,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 819,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 918,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 918,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`legacy composition badge-burst slot variants > with no imagery at all, which redirects the panel layouts 1`] = `
{
  "children": [
    {
      "fontSize": 70,
      "h": 120,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 728,
    },
    {
      "fontSize": 37,
      "h": 62,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 881,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 963,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 963,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`legacy composition badge-burst slot variants > without a footer, so the balance shift stays capped 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "fontSize": 70,
      "h": 120,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 728,
    },
    {
      "fontSize": 37,
      "h": 62,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 881,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 963,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 963,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`legacy composition editorial-sidebar slot variants > with no imagery at all, which redirects the panel layouts 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "editorial-sidebar-bg",
      "type": "shape",
      "w": 410,
      "x": 0,
      "y": 0,
    },
    {
      "fontSize": 47,
      "h": 165,
      "originId": "headline",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 200,
    },
    {
      "fontSize": 18,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 395,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 54,
      "y": 474,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 54,
      "y": 474,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`legacy composition editorial-sidebar slot variants > without a footer, so the balance shift stays capped 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "editorial-sidebar-bg",
      "type": "shape",
      "w": 410,
      "x": 0,
      "y": 0,
    },
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 670,
      "x": 410,
      "y": 0,
    },
    {
      "fontSize": 47,
      "h": 165,
      "originId": "headline",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 200,
    },
    {
      "fontSize": 18,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 395,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 54,
      "y": 474,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 54,
      "y": 474,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`legacy composition hero-fullbleed slot variants > with no imagery at all, which redirects the panel layouts 1`] = `
{
  "children": [
    {
      "fontSize": 92,
      "h": 253,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 591,
    },
    {
      "fontSize": 35,
      "h": 66,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 877,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 963,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 963,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`legacy composition hero-fullbleed slot variants > without a footer, so the balance shift stays capped 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "fontSize": 92,
      "h": 253,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 591,
    },
    {
      "fontSize": 35,
      "h": 66,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 877,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 963,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 963,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`legacy composition minimal-centered slot variants > with no imagery at all, which redirects the panel layouts 1`] = `
{
  "children": [
    {
      "fontSize": 66,
      "h": 114,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 396,
    },
    {
      "fontSize": 35,
      "h": 59,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 542,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 633,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 633,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`legacy composition minimal-centered slot variants > without a footer, so the balance shift stays capped 1`] = `
{
  "children": [
    {
      "h": 428,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "fontSize": 66,
      "h": 114,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 604,
    },
    {
      "fontSize": 35,
      "h": 59,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 751,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 842,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 842,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`legacy composition split-panel slot variants > with no imagery at all, which redirects the panel layouts 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "split-panel-bg",
      "type": "shape",
      "w": 497,
      "x": 0,
      "y": 0,
    },
    {
      "fontSize": 47,
      "h": 165,
      "originId": "headline",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 200,
    },
    {
      "fontSize": 21,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 395,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 54,
      "y": 474,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 54,
      "y": 474,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`legacy composition split-panel slot variants > without a footer, so the balance shift stays capped 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "split-panel-bg",
      "type": "shape",
      "w": 497,
      "x": 0,
      "y": 0,
    },
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 583,
      "x": 497,
      "y": 0,
    },
    {
      "fontSize": 47,
      "h": 165,
      "originId": "headline",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 200,
    },
    {
      "fontSize": 21,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 395,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 54,
      "y": 474,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 54,
      "y": 474,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`legacy composition top-bottom slot variants > with no imagery at all, which redirects the panel layouts 1`] = `
{
  "children": [
    {
      "fontSize": 65,
      "h": 100,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 54,
    },
    {
      "fontSize": 35,
      "h": 59,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 176,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 256,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 256,
    },
  ],
  "typeBudget": 1.7190723260611362,
}
`;

exports[`legacy composition top-bottom slot variants > without a footer, so the balance shift stays capped 1`] = `
{
  "children": [
    {
      "h": 697,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 176,
    },
    {
      "fontSize": 65,
      "h": 100,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 54,
    },
    {
      "fontSize": 35,
      "h": 59,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 894,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 963,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 963,
    },
  ],
  "typeBudget": 1.7190723260611362,
}
`;
